istio-controlplane/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali-ingress
  namespace: istio-system
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: kiali.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:  
            name: kiali
            port:
              number: 80
---
